Added ability to reload progress

--- a/views/game.html
+++ b/views/game.html
@@ -19,12 +19,12 @@
 
     <script>
         // passed to page with server templating engine
-        const username = '{{.Username}}';
+        const username = "{{.Username}}";
 
         // list of words passed to page with server templating engine
         // then converted to json object/array
         const words = JSON.parse('{{.WordList}}');
-        let wordIndex = 0;
+        let wordIndex = parseInt("{{.Score}}", 10);
 
         // set initial word on page load
         let currentWord = document.getElementById("word")
