Added templating header

--- a/views/game.html
+++ b/views/game.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Word Guessing Race</h1>
+    {{template "header.html"}}
     <div id="game">
         <h2 id="word"></h2>
         <input type="text" id="guess">
