--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
     <title>Connect to server</title>
 </head>
 <body>
-    <h1>Word guessing race</h1>
+    {{template "header.html"}}
     <form method="post" action="/">
         <input type="text" placeholder="Username" name="username" id="username"><br>
         <input type="submit" value="Go!">
