--- a/views/home.html
+++ b/views/home.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect to server</title>
+    <title>Word guessing race</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/main.css">
 </head>
 <body>
     {{template "header.html"}}
-    <form method="post" action="/">
-        <input type="text" placeholder="Username" name="username" id="username"><br>
-        <input type="submit" value="Go!">
-    </form>
+    <div class="card has-text-centered">
+        <form method="post" action="/">
+            <div class="field">
+                <label class="label is-large" for="username">Username:</label>
+                <div class="control">
+                    <input class="input is-primary" type="text" placeholder="Username" name="username" id="username">
+                </div>
+            </div>
+            <input class="button is-primary" type="submit" value="Go!">
+        </form>
+    </div>
 </body>
 </html>
