Basic header styling

--- a/views/header.html
+++ b/views/header.html
@@ -1,5 +1,7 @@
 {{define "header.html"}}
 
-<h1 class="title">Word Guessing Race</h1>
+<div class="card has-text-centered">
+    <h1 class="title">Word Guessing Race</h1>
+</div>
 
 {{end}}
