Moved main.js to html to improve readability

--- a/views/game.html
+++ b/views/game.html
@@ -14,7 +14,7 @@
         <div class="field">
             <h2 class="label is-large" id="word"></h2>
             <div class="control">
-                <input class="input is-primary" type="text" id="guess" placeholder="Press ENTER to submit">
+                <input class="input is-primary" type="text" id="guess" placeholder="Correct guesses auto-submit">
             </div>
         </div>
     </div>
@@ -46,7 +46,123 @@
         const words = JSON.parse('{{.WordList}}');
         const totalWords = words.length;
         let wordIndex = parseInt("{{.Score}}", 10);
+
+        // set initial word on page load
+        let currentWord = document.getElementById("word")
+        currentWord.innerText = words[wordIndex][0] + " _ " + words[wordIndex][2] + " _ " + words[wordIndex][4];
+
+        // check guess on input change
+        const guessBox = document.getElementById("guess");
+        guessBox.addEventListener("keyup", e => {
+            checkGuess(guessBox.value);
+            console.log(guessBox.value);
+        })
+
+        // update scoreboard every X period of time
+        let scoreRefresh = setInterval(() => {
+            getScoreboardJSON().then(res => {
+                // remove old scoreboard and replace with updated one
+                removeChildren(document.getElementById("scoreboard"));
+                addScoreboardRows(res);
+
+                // check if there's a winner
+                checkWinner(res);
+            })
+        }, 2000);
+
+        // return promise that will resolve to json data
+        function getScoreboardJSON() {
+            return fetch("http://" + url + "/score", {
+                method: "GET",
+                headers: {
+                    "Content-type": "application/json; charset=UTF-8",
+                },
+            }).then(res => res.json())
+            .catch(e => console.log("Error: ", e));
+        }
+
+        // take json data and add rows to scoreboard table
+        function addScoreboardRows(json) {
+            const scores = JSON.parse(json);
+            for (const score of scores) {
+                addScoreboardRow(score);
+            }
+        }
+
+        function addScoreboardRow(row) {
+            // get constants to append together
+            const sb = document.getElementById("scoreboard");
+            const newRow = document.createElement("tr");
+
+            // create new table row and set data
+            const name = document.createElement("td")
+            name.innerText = row.name;
+            newRow.appendChild(name);
+            const score = document.createElement("td");
+            score.innerText = row.score;
+            newRow.appendChild(name);
+            newRow.appendChild(score);
+
+            // append new row to parent table element
+            sb.appendChild(newRow);
+        }
+
+        // iterate through child elements of node and remove all but first
+        function removeChildren(element) {
+            while (element.childElementCount > 0) {
+                element.removeChild(element.lastElementChild);
+            }
+        }
+
+        function checkWinner(json) {
+            // iterate through all users and check for winner
+            for (user of JSON.parse(json)) {
+                if (user.score == totalWords) {
+                    // stop pinging server for score data
+                    clearInterval(scoreRefresh);
+                    
+                    // display winner
+                    displayWinner(user.name);
+                }
+            }
+        }
+
+        function displayWinner(winnerName) {
+            // remove game elements
+            removeChildren(document.getElementById("game"));
+
+            // add winner elements
+            const banner = document.createElement("h2");
+            banner.innerText = winnerName + " won!";
+            banner.className = "title is-large";
+
+            game.appendChild(banner);
+        }
+
+        function checkGuess(guess) {
+            if (guess == words[wordIndex]) {
+                // update to new word
+                wordIndex++;
+                currentWord.innerText = words[wordIndex] != null ? words[wordIndex][0] + " _ " + words[wordIndex][2] + " _ " + words[wordIndex][4] : "No more words";
+                guessBox.value = "";
+
+                // post completion status back to server to update score
+                updateScore();
+            }
+        }
+
+        // post username as json to api endpoint to register completed word
+        function updateScore() {
+            fetch("http://" + url + "/score", {
+                method: "POST",
+                headers: {
+                    "Content-type": "application/json; charset=UTF-8",
+                },
+                body: JSON.stringify({
+                    name: username,
+                })
+            }).catch(e => console.error("Error: ", e));
+        }
     </script>
-    <script src="/assets/main.js"></script>
 </body>
 </html>
