--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
             <div class="field">
                 <label class="label is-large" for="username">Username:</label>
                 <div class="control">
-                    <input class="input is-primary" type="text" placeholder="Username" name="username" id="username">
+                    <input class="input is-primary" type="text" placeholder="Username" name="username" id="username" required>
                 </div>
             </div>
             <input class="button is-primary" type="submit" value="Go!">
