--- a/views/game.html
+++ b/views/game.html
@@ -46,18 +46,21 @@
         // then converted to json object/array
         const words = JSON.parse('{{.WordList}}');
         const totalWords = words.length;
+
+        // passed to page from server to allow for reloading progress
         let wordIndex = parseInt("{{.Score}}", 10);
 
         // set initial word on page load
-        let currentWord = document.getElementById("word")
-        currentWord.innerText = words[wordIndex][0] + " _ " + words[wordIndex][2] + " _ " + words[wordIndex][4];
+        setWord(words[wordIndex]);
 
-        // check guess on input change
+        // check guess on enter and update
         const guessBox = document.getElementById("guess");
         guessBox.addEventListener("keyup", e => {
             if (e.keyCode == 13) {
                 checkGuess(guessBox.value);
             }
+
+            // todo: update guessBox outline on right or wrong input
         })
 
         // update scoreboard every X period of time
@@ -71,6 +74,17 @@
                 checkWinner(res);
             })
         }, 2000);
+
+        // set guessing word
+        function setWord(word) {
+            setText(word[0] + " _ " + word[2] + " _ " + word[4]);
+        }
+
+        // set guessing text
+        function setText(text) {
+            let w = document.getElementById("word");
+            w.innerHTML = text;
+        }
 
         // return promise that will resolve to json data
         function getScoreboardJSON() {
@@ -145,7 +159,11 @@
             if (guess == words[wordIndex]) {
                 // update to new word
                 wordIndex++;
-                currentWord.innerText = words[wordIndex] != null ? words[wordIndex][0] + " _ " + words[wordIndex][2] + " _ " + words[wordIndex][4] : "No more words";
+                if (words[wordIndex] != null) {
+                    setWord(words[wordIndex]);
+                } else {
+                    setText("No more words");
+                }
                 guessBox.value = "";
 
                 // post completion status back to server to update score
