--- a/views/error.html
+++ b/views/error.html
@@ -11,10 +11,7 @@
 <body>
     {{template "header.html"}}
     <div class="card has-text-centered">
-        <h2 class="title is-large">Error {{.Error}}: {{.Message}}</h2>
-        <a href="/">
-            <input class="button is-primary" type="button" value="Home">
-        </a>
+        <h2 class="title is-4">Error {{.Error}}: {{.Message}}</h2>
     </div>
 </body>
 </html>
