--- a/views/header.html
+++ b/views/header.html
@@ -2,6 +2,13 @@
 
 <div class="card has-text-centered">
     <h1 class="title">Word Guessing Race</h1>
+    <h2 class="header-subtitle subtitle is-6">A multiplayer word guessing game</h2>
+    <a href="/">
+        <input class="button is-primary" type="button" value="Home">
+    </a>
+    <a href="/how-to-play">
+        <input class="button is-primary" type="button" value="How To Play">
+    </a>
 </div>
 
 {{end}}
