--- a/views/header.html
+++ b/views/header.html
@@ -2,13 +2,16 @@
 
 <div class="card has-text-centered">
     <h1 class="title">Word Guessing Race</h1>
-    <h2 class="header-subtitle subtitle is-6">A multiplayer word guessing game</h2>
-    <a href="/">
-        <input class="button is-primary" type="button" value="Home">
-    </a>
-    <a href="/how-to-play">
-        <input class="button is-primary" type="button" value="How To Play">
-    </a>
+    <h2 class="subtitle is-6">A multiplayer word guessing game</h2>
+    <div class="header-buttons">
+        <a href="/">
+            <input class="button is-primary" type="button" value="Home">
+        </a>
+        <a href="/how-to-play">
+            <input class="button is-primary" type="button" value="How To Play">
+        </a>
+    </div>
+    
 </div>
 
 {{end}}
