Added new note to how to play page

--- a/views/how_to_play.html
+++ b/views/how_to_play.html
@@ -22,6 +22,7 @@
             <li>When 1 player guesses all 10 words the game stops</li>
         </ol>
         <p><b>Note:</b> All words are nouns, verbs or adjectives with no names. It's possible for a word to occur more than once</p>
+        <p><b>Note:</b> As soon as a someone submits a username they're able to place guesses. When playing in a group, ensure everyone submits at the same time</p>
     </div>
 </body>
 </html>
